--- a/index.html
+++ b/index.html
@@ -10,15 +10,23 @@
 </head>
 <body>
     <div class = "dices">
-    <img id = "img1" src="dice1.png" alt=""></img>
-    <img id = "img2" src="dice1.png" alt=""></img>
-    <img id = "img3" src="dice1.png" alt=""></img>
-    <img id = "img4" src="dice1.png" alt=""></img>
-    <img id = "img5" src="dice1.png" alt=""></img>
-    </div>
-    <button id="push dice" type="button" onclick="push()" onclick="dice">
+    <button type="button" onclick="click1()"><img id = "img1" src="dice0.png"alt="" height="100px" width="100px"/></button>
+    <button type="button" onclick="click2()"><img id = "img2" src="dice0.png"alt="" height="100px" width="100px"/></button> 
+    <button type="button" onclick="click3()"><img id = "img3" src="dice0.png"alt="" height="100px" width="100px"/></button>
+    <button type="button" onclick="click4()"><img id = "img4" src="dice0.png"alt="" height="100px" width="100px"/></button>
+    <button type="button" onclick="click5()"><img id = "img5" src="dice0.png"alt="" height="100px" width="100px"/></button>
+    </div>    
+    <div class = "dices">
+    <button type="button"><img id = "img6" src="dice0.png"alt="" height="100px" width="100px"/></button>
+    <button type="button"><img id = "img7" src="dice0.png"alt="" height="100px" width="100px"/></button> 
+    <button type="button"><img id = "img8" src="dice0.png"alt="" height="100px" width="100px"/></button>
+    <button type="button"><img id = "img9" src="dice0.png"alt="" height="100px" width="100px"/></button>
+    <button type="button"><img id = "img10" src="dice0.png"alt="" height="100px" width="100px"/></button>
+        </div>
+    <button id="push dice" type="button" onclick="push()">
     push
     </button>
+    <button id="submit" type="button" onclick="count()">final</button>
     <div>
         <table border="1">
             <tr>
