--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </tr>
             <tr>
                 <td>1</td>
-                <td><button id="Aces"></button></td>
+                <td><button onclick="hi()"id="Aces"></button></td>
             </tr>
             <tr>
                 <td>2</td>
